Pre finally commit 🔵 It remains to do a status and style checker

--- a/templates/dashboard-create.html
+++ b/templates/dashboard-create.html
@@ -23,8 +23,12 @@
         <input type="text" name="name" id="name" class="form-control" style="width:200px"><br>
         <label for="name" class="label">Column separator</label><br>
         <select name="separators" id="separators" class="custom-select" style="width:200px">
-            <option value = "comma" label='Comma (,)'></option>
-            <option value = "dot-comma">Dot comma (;)</option>
+            <option value="comma" label='Comma (,)'></option>
+            <option value="semicolon">Semicolon (;)</option>
+            <option value="tab">Tab (\t)</option>
+            <option value="pipe">Pipe (|)</option>
+            <option value="tilde">Tilde (~)</option>
+            <option value="space">Space ( )</option>
         </select><br><br>
         <label for="name" class="label">String character</label><br>
         <select name="character" id="character" class="custom-select" style="width:200px">
