--- a/templates/data-generate.html
+++ b/templates/data-generate.html
@@ -77,7 +77,7 @@
                             <th scope="row">{{ forloop.counter }}</th>
                             <td>{{ el.date|date:'Y-m-d' }}</td>
                             <td>{{ el.status }}</td>
-                            <td style="width:25%;"><a href="" style="color:light-blue;">Download</a></td>
+                            <td style="width:25%;"><a href="{% url 'download' user_name el.id %}" style="color:light-blue;">Download</a></td>
                         </tr>
                         {% endfor %}
                         </tbody>
