--- a/templates/data-generate.html
+++ b/templates/data-generate.html
@@ -7,9 +7,10 @@
 {% endblock %}
 
 {% block content %}
+<div id="files-count" data-count="{{ files|length }}"></div>
 <div class="container" style="margin-top: 25px; margin-left:5%;">
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-3">
             <div class="title">{{ schema.title }}</div>
         </div>
         <div class="col-md-2">
@@ -54,7 +55,7 @@
                     <input type="number" name="rows" id="rows" class="form-control" style="width:100px;">
                 </div>
                 <div class="col-md-2">
-                    <button type="submit" class="btn btn-success">Generate Data</button>
+                    <button type="submit" id="data-gen" class="btn btn-success">Generate Data</button>
                 </div>
             </div>
         </div>
@@ -71,12 +72,28 @@
                             <th scope="col">Actions</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="table">
                         {% for el in files %}
                         <tr>
                             <th scope="row">{{ forloop.counter }}</th>
                             <td>{{ el.date|date:'Y-m-d' }}</td>
-                            <td>{{ el.status }}</td>
+                            {% if el.status == False %}
+                            <td>
+                                <div style="width: 75px; height: 25px; background: #999999; border-radius: 4px;">
+                                    <span style="width: 65px; height: 12px; padding: 15%; font-family: 'Helvetica Neue'; font-style: normal; font-weight: 700; font-size: 12px; line-height: 12px; color: #FFFFFF;">
+                                        Processing
+                                    </span>
+                                </div>
+                            </td>
+                            {% else %}
+                            <td>
+                                <div style="width: 49px; height: 25px; background: #5CB85C; border-radius: 4px;">
+                                    <span style="width: 36px; height: 12px; padding: 15%; font-family: 'Helvetica Neue'; font-style: normal; font-weight: 700; font-size: 12px; line-height: 12px; color: #FFFFFF;">
+                                        Ready
+                                    </span>
+                                </div>
+                            </td>
+                            {% endif %}
                             <td style="width:25%;"><a href="{% url 'download' user_name el.id %}" style="color:light-blue;">Download</a></td>
                         </tr>
                         {% endfor %}
@@ -88,4 +105,45 @@
     </form>
 
 </div>
+
+<script>
+    function addStatus () {
+        var table = document.getElementById("table");
+
+        var tr = document.createElement("tr");
+        tr.id = "tr";
+        table.appendChild(tr);
+
+        var th = document.createElement("th");
+        th.scope = "row";
+        var num = {{ files|length }} + 1;
+        th.innerHTML = num;
+        tr.appendChild(th);
+
+        var td1 = document.createElement("td");
+        const currentDate = new Date();
+        const year = currentDate.getFullYear();
+        const month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
+        const day = currentDate.getDate().toString().padStart(2, '0');
+        const formattedDate = `${year}-${month}-${day}`;
+        td1.innerHTML = formattedDate;
+        tr.appendChild(td1);
+
+        var td2 = document.createElement("td");
+        tr.appendChild(td2);
+        var div = document.createElement("div");
+        div.style = "width: 75px; height: 25px; background: #999999; border-radius: 4px;";
+        td2.appendChild(div);
+        var span = document.createElement("span");
+        span.style = "width: 65px; height: 12px; padding: 15%; font-family: 'Helvetica Neue'; font-style: normal; font-weight: 700; font-size: 12px; line-height: 12px; color: #FFFFFF;";
+        span.innerHTML = "Processing";
+        div.appendChild(span);
+
+        var td3 = document.createElement("td");
+        tr.appendChild(td3);
+
+    }
+
+    document.getElementById("data-gen").addEventListener("click", addStatus);
+</script>
 {% endblock %}
